--- a/ajax.html
+++ b/ajax.html
@@ -7,6 +7,9 @@
     <title>Document</title>
 </head>
 <body>
-    <script src="ajax.1."></script>
+    <script src="js/ajax.2.js"></script>
+    <script>
+        // sendAjax()
+    </script>
 </body>
 </html>
